apps/paperless-ngx/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paper
  labels:
    goldilocks.fairwinds.com/enabled: "true"
